[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/enemies/pig_all_frames/box/box.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/box_pig/box_esquerda.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.5, 5.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Texture:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "slice"
length = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[node name="box" type="Area2D"]
position = Vector2( 0, 8 )
collision_layer = 8
collision_mask = 7
script = ExtResource( 2 )
damage = 0

[node name="colisao" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -7.5 )
shape = SubResource( 4 )

[node name="Texture" type="Sprite" parent="."]
position = Vector2( 1, -14 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
hframes = 3
frame = 2

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/slice = SubResource( 5 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -7.5 )
scale = Vector2( 0.6, 0.65 )

[connection signal="body_entered" from="." to="." method="_on_cannon_ball_body_entered"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
